src/test/deca/context/valid/obj/cast/test_cast_class.deca
// Description:
//    Create a class and cast it to a subclass
//
// Resultats:
//   
// 
// Historique:
//    cree le 01/01/2024

class A {
}

class B extends A {
}

{
    A a = new A();
    B b = new B();
    a = (A) (b);
}
