src/test/deca/context/invalid/obj/cast/test_cast_class.deca
// Description:
//    Create a class with a mother that is a type
//
// Resultats:
//   les deux types ne sont pas compatibles
// 
// Historique:
//    cree le 20/01/2024

class A {
}

class B extends A {
}

{
    A a = new A();
    B b = new B();
    b = (A) (b);
}
